2003-11-03  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (dvi): Move targets to $(docobjdir).
	(g77.dvi): Simplify rule.
	(g77.info): Sinplify rule.
	(g77.1): Delete.
	(g77.pod): New intermediate rule.

2003-10-31  Jakub Jelinek  <jakub@redhat.com>

	* com.c (ffecom_sym_transform_): Set tree type of offset
	to ssizetype.

2003-10-21  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (f/g77.1): Honor $(docobjdir).
	($(docobjdir)/g77.info): Replace $(srcdir)/doc with $(docdir).
	(f/g77.dvi): Likewise.

2003-10-21  Jan Hubicka  <jh@suse.cz>

	* lex.c (ffelex_cfelex_): Initialize d.

Mon Oct 20 23:15:46 2003  Mark Mitchell  <mark@codesourcery.com>

	* Make-lang.in ($(docobjdir)/g77.info): Add dependency on
	stmp-docobjdir.

Mon Oct 20 13:49:43 2003  Mark Mitchell  <mark@codesourcery.com>

	* Make-lang.in (.PHONY): Remove f77.info, f77.install-info.
	(info): Update dependencies.
	($(srcdir)/f/g77.info): Replace with ...
	($(docobjdir)/g77.info): ... this.
	(f77.install-info): Remove.
	(install-info): New target.

2003-10-06  Mark Mitchell  <mark@codesourcery.com>

	* Make-lang.in (f77.info): Replace with ...
	(info): ... this.
	(f77.dvi): Replace with ...
	(dvi): ... this.
	(f77.generated-manpages): Replace with ...
	(generated-manpages): ... this.

2003-09-29  Zack Weinberg  <zack@codesourcery.com>

	* target.c (FFETARGET_ATOF_): Delete.
	(ffetarget_real1, ffetarget_real2): Use real_from_string directly.
	* target.h (FFETARGET_REAL_VALUE_FROM_INT_,
	FFETARGET_REAL_VALUE_FROM_LONGLONG_): Use mode_for_size,
	don't refer to SFmode or DFmode directly.

2003-09-28  Richard Henderson  <rth@redhat.com>

	* com.c (duplicate_decls): Copy DECL_SOURCE_LOCATION, not
	file and line separately.

2003-09-21  Richard Henderson  <rth@redhat.com>

	* com.c, ste.c: Revert.

2003-09-21  Richard Henderson  <rth@redhat.com>

	* com.c, ste.c: Update for DECL_SOURCE_LOCATION rename and
	change to const.

2003-09-21  Toon Moene  <toon@moene.indiv.nluug.nl>
